Persistable interface to store data on db, instead of Entity